// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolCard > snapshot — failure (output-error) 1`] = `
<div
  aria-live="polite"
  class="w-full"
  data-state="failure"
  data-testid="tool-card"
>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-xl bg-card py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl border-dashed"
    data-size="sm"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header auto-rows-min rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 flex flex-row items-center gap-2 pb-0"
      data-slot="card-header"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x size-3.5 shrink-0 text-destructive"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      <div
        class="group-data-[size=sm]/card:text-sm text-xs font-mono font-semibold"
        data-slot="card-title"
      >
        lookup_control
      </div>
      <span
        class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center gap-1 overflow-hidden rounded-4xl border px-2 py-0.5 font-medium whitespace-nowrap transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! border-transparent bg-red-100 text-red-800 dark:bg-red-900/30 dark:text-red-400 ml-auto text-[10px]"
        data-slot="badge"
        data-variant="error"
      >
        error
      </span>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3 pt-2"
      data-slot="card-content"
    >
      <p
        class="text-xs text-destructive"
        role="alert"
      >
        Control CC9.9 not found in knowledge base
      </p>
      <details
        class="mt-1"
      >
        <summary
          class="cursor-pointer select-none text-xs text-muted-foreground hover:text-foreground"
        >
          Input
        </summary>
        <div
          class="mt-2 space-y-2"
        >
          <div>
            <p
              class="mb-0.5 text-[10px] font-medium uppercase tracking-wide text-muted-foreground"
            >
              Input
            </p>
            <pre
              class="overflow-auto rounded bg-muted p-2 text-[11px] leading-tight whitespace-pre-wrap break-all"
            >
              {
  "control_id": "CC9.9"
}
            </pre>
          </div>
        </div>
      </details>
    </div>
  </div>
</div>
`;

exports[`ToolCard > snapshot — pending (input-streaming) 1`] = `
<div
  aria-live="polite"
  class="w-full"
  data-state="pending"
  data-testid="tool-card"
>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-xl bg-card py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl border-dashed"
    data-size="sm"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header auto-rows-min rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 flex flex-row items-center gap-2 pb-0"
      data-slot="card-header"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle size-3.5 shrink-0 animate-spin text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
      <div
        class="group-data-[size=sm]/card:text-sm text-xs font-mono font-semibold"
        data-slot="card-title"
      >
        lookup_control
      </div>
      <span
        class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center gap-1 overflow-hidden rounded-4xl border px-2 py-0.5 font-medium whitespace-nowrap transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! border-border text-foreground [a]:hover:bg-muted [a]:hover:text-muted-foreground ml-auto text-[10px]"
        data-slot="badge"
        data-variant="outline"
      >
        running
      </span>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3 pt-2"
      data-slot="card-content"
    />
  </div>
</div>
`;

exports[`ToolCard > snapshot — success (output-available) 1`] = `
<div
  aria-live="polite"
  class="w-full"
  data-state="success"
  data-testid="tool-card"
>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-xl bg-card py-4 text-sm text-card-foreground ring-1 ring-foreground/10 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl border-dashed"
    data-size="sm"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header auto-rows-min rounded-t-xl px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3 flex flex-row items-center gap-2 pb-0"
      data-slot="card-header"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big size-3.5 shrink-0 text-green-600 dark:text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <div
        class="group-data-[size=sm]/card:text-sm text-xs font-mono font-semibold"
        data-slot="card-title"
      >
        lookup_control
      </div>
      <span
        class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center gap-1 overflow-hidden rounded-4xl border px-2 py-0.5 font-medium whitespace-nowrap transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! border-transparent bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-400 ml-auto text-[10px]"
        data-slot="badge"
        data-variant="success"
      >
        done
      </span>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3 pt-2"
      data-slot="card-content"
    >
      <details
        class="mt-1"
      >
        <summary
          class="cursor-pointer select-none text-xs text-muted-foreground hover:text-foreground"
        >
          Input / Output
        </summary>
        <div
          class="mt-2 space-y-2"
        >
          <div>
            <p
              class="mb-0.5 text-[10px] font-medium uppercase tracking-wide text-muted-foreground"
            >
              Input
            </p>
            <pre
              class="overflow-auto rounded bg-muted p-2 text-[11px] leading-tight whitespace-pre-wrap break-all"
            >
              {
  "control_id": "CC6.1"
}
            </pre>
          </div>
          <div>
            <p
              class="mb-0.5 text-[10px] font-medium uppercase tracking-wide text-muted-foreground"
            >
              Output
            </p>
            <pre
              class="overflow-auto rounded bg-muted p-2 text-[11px] leading-tight whitespace-pre-wrap break-all"
            >
              {
  "control_id": "CC6.1",
  "title": "Logical and Physical Access Controls",
  "nist_refs": [
    "AC-2",
    "AC-3"
  ]
}
            </pre>
          </div>
        </div>
      </details>
    </div>
  </div>
</div>
`;
